--- a/jquery-calculator.html
+++ b/jquery-calculator.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>jQuery Calculator</title>
+  <meta charset="UTF-8">
+  <title>jQuery Calculator</title>
 
-    <!-- Added link to the jQuery Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Added link to the jQuery Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Added a link to Bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <!-- Added a link to Bootstrap-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 </head>
+
 <body>
 
-<!-- Jumbotron for Title -->
-<div class="jumbotron">
+  <!-- Jumbotron for Title -->
+  <div class="jumbotron">
     <h1 class="text-center">jQuery Calculator</h1>
     <h3 class="text-center">Perform basic mathematic operations using the power of jQuery!</h3>
-</div>
+  </div>
 
-<div class="container">
+  <div class="container">
 
     <div class="row">
 
@@ -29,27 +31,61 @@
           <h3 class="card-header">Calculator</h3>
 
           <div class="card-body">
-            <button id="button-1" class="btn btn-primary number" value="1"><h1>1</h1></button>
-            <button id="button-2" class="btn btn-primary number" value="2"><h1>2</h1></button>
-            <button id="button-3" class="btn btn-primary number" value="3"><h1>3</h1></button>
-            <button id="button-plus" class="btn btn-danger operator" value="plus"><h1>+</h1></button>
+            <button id="button-1" class="btn btn-primary number" value="1">
+              <h1>1</h1>
+            </button>
+            <button id="button-2" class="btn btn-primary number" value="2">
+              <h1>2</h1>
+            </button>
+            <button id="button-3" class="btn btn-primary number" value="3">
+              <h1>3</h1>
+            </button>
+            <button id="button-plus" class="btn btn-danger operator" value="plus">
+              <h1>+</h1>
+            </button>
             <br><br>
-            <button id="button-4" class="btn btn-primary number" value="4"><h1>4</h1></button>
-            <button id="button-5" class="btn btn-primary number" value="5"><h1>5</h1></button>
-            <button id="button-6" class="btn btn-primary number" value="6"><h1>6</h1></button>
-            <button id="button-minus" class="btn btn-danger operator" value="minus"><h1>&minus;</h1></button>
+            <button id="button-4" class="btn btn-primary number" value="4">
+              <h1>4</h1>
+            </button>
+            <button id="button-5" class="btn btn-primary number" value="5">
+              <h1>5</h1>
+            </button>
+            <button id="button-6" class="btn btn-primary number" value="6">
+              <h1>6</h1>
+            </button>
+            <button id="button-minus" class="btn btn-danger operator" value="minus">
+              <h1>&minus;</h1>
+            </button>
             <br><br>
-            <button id="button-7" class="btn btn-primary number" value="7"><h1>7</h1></button>
-            <button id="button-8" class="btn btn-primary number" value="8"><h1>8</h1></button>
-            <button id="button-9" class="btn btn-primary number" value="9"><h1>9</h1></button>
-            <button id="button-multiply" class="btn btn-danger operator" value="times"><h1>&times;</h1></button>
+            <button id="button-7" class="btn btn-primary number" value="7">
+              <h1>7</h1>
+            </button>
+            <button id="button-8" class="btn btn-primary number" value="8">
+              <h1>8</h1>
+            </button>
+            <button id="button-9" class="btn btn-primary number" value="9">
+              <h1>9</h1>
+            </button>
+            <button id="button-multiply" class="btn btn-danger operator" value="times">
+              <h1>&times;</h1>
+            </button>
             <br><br>
-            <button id="button-0" class="btn btn-primary number" value="0"><h1>0</h1></button>
-            <button id="button-divide" class="btn btn-danger operator" value="divide"><h1>&divide;</h1></button>
-            <button id="button-power" class="btn btn-danger operator" value="power"><h1>^</h1></button>
-            <button id="button-equal" class="btn btn-success equal" value="equals"><h1>=</h1></button>
+            <button id="button-0" class="btn btn-primary number" value="0">
+              <h1>0</h1>
+            </button>
+            <button id="button-divide" class="btn btn-danger operator" value="divide">
+              <h1>&divide;</h1>
+            </button>
+            <button id="button-power" class="btn btn-danger operator" value="power">
+              <h1>^</h1>
+            </button>
+            <button id="button-equal" class="btn btn-success equal" value="equals">
+              <h1>=</h1>
+            </button>
             <br><br>
-            <button id="button-clear" class="btn btn-dark clear" value="clear"><h1>clear</h1></button>
+            <button id="button-clear" class="btn btn-dark clear" value="clear">
+              <h1>clear</h1>
+            </button>
           </div>
         </div>
       </div>
@@ -70,28 +106,29 @@
     </div>
   </div>
 
-<script type="text/javascript">
-  var num1 = '';
-  var num2 = '';
-  var operator = '';
-  var total = '';
+  <script type="text/javascript">
+    var num1 = '';
+    var num2 = '';
+    var operator = '';
+    var total = '';
 
-$(document).ready(function() {
-  $('button').on("click", function(e) {
-   console.log('numberClicked', this.value);
-   var buttonValue = e.target.innerHTML;
-  // $('button').on('click', funciton(e) {
-     //var btn = e.target.innerHTML;
+    $(document).ready(function () {
+      $('button').on("click", function (e) {
+        console.log('numberClicked', this.value);
+        var buttonValue = e.target.innerHTML;
+        num1 = parseInt(buttonValue);
+        console.log("number",num1);
 
-   })
-   $('#first-number').html(buttonValue)
-   num1 = buttonValue;
-   });
+        // $('#first-number').html(buttonValue)
+        // num1 = buttonValue;
+      });
+      });
 // Your code here...
 
 
 
-</script>
+  </script>
 
 </body>
+
 </html>
